hice algunas correcciones al css intentando hacer la pag responsive

--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
     <div class="valoresUsuario">
     <input id= "input_horas" type="number" placeholder="hs" min="0"> <input id= "input_minutos" type="number" placeholder="min" min="0"> <input id= "input_segundos" type="number" placeholder="seg" min="0">
     </div>
+    
     <div class = "visualNumeros" id="valores_activos">00:00:00</div>
+    
     <br>
     <div class="valoresUsuario">
     <button onclick="iniciarTemporizador()">Iniciar</button>
     <button onclick="detenerConteo()">detener</button>
-    <button onclick="resetear()">resetear</button>
+    <button onclick="resetear()">reset</button>
     </div>
 </div>
 <div class = "terceraColumnaRelleno"> </div>
